Use valueOf as ADT recommends
Use Boolean.valueOf, Long.valueOf, Integer.valueOf, ... instead of new
Boolean(), new Long(), ..., as ADT recommends