@@ -30,7 +30,7 @@ public class OperationTimeoutException extends Exception {
      * @param command Executed command
      */
     public OperationTimeoutException(long timeout, String command) {
-        super(String.format("(%d) %s", new Long(timeout), command)); //$NON-NLS-1$
+        super(String.format("(%d) %s", Long.valueOf(timeout), command)); //$NON-NLS-1$
     }
 
 }
